# sipm_studio

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: main.yml
docs/: Makefile
docs/source/: conf.py  developer.rst  index.rst  tutorials.rst
docs/source/api/: modules.rst  sipm_studio.dsp.rst  sipm_studio.examples.rst  sipm_studio.gain.rst  sipm_studio.light.rst  sipm_studio.raw.rst  sipm_studio.rst  sipm_studio.simulations.rst  sipm_studio.util.rst
docs/source/manuals/: build_raw.rst  index.rst  process_pde.rst
sams_sipm_studio/dsp/: __init__.py  adc_to_current.py  charge_to_photons.py  current_to_charge.py  gain_processors.py  processors.py  qpe_peak_finding.py
sams_sipm_studio/examples/: default_gain.json
sams_sipm_studio/gain/: __init__.py  gain.py
sams_sipm_studio/light/: light.py
sams_sipm_studio/raw/: __init__.py  daq_to_raw.py  daq_to_raw_eliza1.sh  submit_daq_to_raw.sh
sams_sipm_studio/util/: parse_compass_filename.py  parse_json_config.py
src/sipm_studio/: __init__.py
src/sipm_studio/dark/: dark_processors.py
src/sipm_studio/dsp/: __init__.py  adc_to_current.py  charge_to_photons.py  current_to_charge.py  find_baseline.py  gain_processors.py  qpe_peak_finding.py
src/sipm_studio/gain/: gain.py
tests/dsp/: __init__.py  test_adc_to_current.py  test_charge_to_photons.py  test_current_to_charge.py  test_gain_processors.py  test_qpe_peak_finding.py
tests/gain/: __init__.py  test_gain.py
tests/light/: test_light.py
tests/raw/: __init__.py  test_daq_to_raw.py
tests/util/: test_parse_compass_filename.py  test_parse_json_config.py
(+21 files in other folders)
