[metadata]
name = sipm_studio
description = Analysis suite for silicon photomultipliers
long_description = file: README.md
long_description_content_type = text/markdown
author = Sam Borden
maintainer = Sam Borden
author_email = sjborden@uw.edu

[options]
packages=find:
package_dir=
    =src
python_requires = >=3.9
zip_safe = False

[options.packages.find]
where=src

[flake8]
extend-ignore = E203, E501
