[metadata]
name = sipm_studio
description = Analysis suite for silicon photomultipliers
long_description = file: README.md
long_description_content_type = text/markdown
author = Sam Borden
maintainer = Sam Borden
author_email = sjborden@uw.edu

[options]
packages=find:
package_dir=
    =src
python_requires = >=3.9
zip_safe = False
install_requires =
    PyWavelets
    colorlog
    h5py>=3.2.0
    iminuit
    matplotlib
    numba!=0.53.*,!=0.54.*
    numexpr
    numpy>=1.21
    pandas>=1.4.4
    parse
    pint
    pyfcutils
    pyfftw
    scikit-learn
    scipy>=1.0.1
    tables
    tqdm
    xmltodict

[options.packages.find]
where=src

[flake8]
extend-ignore = E203, E501
